# scopy

./: pyproject.toml
scopy/: main.py
tests/: test_duplicate_file.py
